# rls

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml  publish.yml  quality.yml  release.yml
rls/: __init__.py  alembic_ops.py  create.py  create_policies.py  plugin.py  register.py  register_alembic.py  registry.py  rls_sessioner.py  session.py  sessioner.py  state.py  verify.py
rls/alembic/: __init__.py  autogen.py  operation.py
rls/catalog/: __init__.py  catalog.py  open.py  reflection.py  table_key.py
rls/context/: __init__.py  context.py  guc.py  serialize.py  session.py  types.py
rls/ddl/: __init__.py  action.py  build.py  statement.py
rls/ops/: __init__.py  comparator.py  implementations.py  operations.py  renderer.py  scoped.py
rls/policy/: __init__.py  command.py  compiled.py  crud.py  normalize.py  policy.py  predicate.py  rule.py
rls/schema/: __init__.py  create.py  register.py  registry.py  roles.py  verify.py  views.py
rls/session/: __init__.py  guc.py  sessioner.py
test/: database.py  fastapi_sample.py  models.py  test_alembic.py  test_alembic_rls_unit.py  test_async_rls.py  test_register.py  test_rls.py  test_session_async.py  test_session_sync.py
test/alembic/: env.py  script.py.mako
tests/: conftest.py  test_alembic.py  test_catalog.py  test_context.py  test_ddl.py  test_normalize.py  test_ops.py  test_plugin.py  test_policy.py  test_register.py  test_scoped.py  test_state.py  test_verify.py
