[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["rls/*"]
dev-mode-dirs = ["."]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"
# Editable installs on lote-synced hosts build from a source tree with no .git (the sync
# strips vcs metadata), so version detection needs a graceful floor there; a real release
# from the intact repo still derives the true tag. The former vcs urls metadata hook ran
# `git rev-parse HEAD` unconditionally and hard-failed on those hosts, so it is gone; it
# only decorated published metadata with a source-archive link.
fallback_version = "0.0.0"

[project]
name = "rls"
dynamic = ["version"]
authors = [
  { name = "Pedro Valois", email = "contact@phvv.me" },
  { name = "DelfinaCare", email = "open-source@delfina.com" },
]
description = "Declarative PostgreSQL row level security for SQLAlchemy and Alembic"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "alembic>=1.13.3",
  "pydantic>=2.9.1",
  "sqlalchemy>=2.0.34",
  "sqlglot>=25",
]
[project.optional-dependencies]
dev = [
  "asyncpg>=0.30",
  "mypy>=1.11.2",
  "psycopg[binary]>=3.0",
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "ruff>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/phvv-me/rls"
Issues = "https://github.com/phvv-me/rls/issues"

[tool.mypy]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
