[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["rls/*"]
dev-mode-dirs = ["."]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"
fallback_version = "0.4.1"

[project]
name = "rlsalchemy"
dynamic = ["version"]
authors = [
  { name = "Pedro Valois", email = "contact@phvv.me" },
  { name = "DelfinaCare", email = "open-source@delfina.com" },
]
description = "Declarative PostgreSQL row level security for SQLAlchemy and Alembic"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "alembic>=1.18.5,<2",
  "inflection>=0.5.1,<1",
  "patos>=0.0.8,<0.1",
  "pydantic>=2.13.4,<3",
  "sqlalchemy>=2.1.0b3,<3",
  "sqlglot>=30,<31",
]

[project.entry-points."alembic.plugins"]
rls = "rls.plugin:plugins"

[project.urls]
Homepage = "https://github.com/phvv-me/rls"
Issues = "https://github.com/phvv-me/rls/issues"

[tool.mypy]
python_version = "3.14"
strict = true
files = ["rls"]

[tool.pyrefly]
project-includes = ["rls", "tests"]
search-path = [".", "tests", "../patos/src"]
python-interpreter-path = "../../.chefe/.pixi/envs/default/bin/python"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
addopts = "-q --cov=rls --cov-branch --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.report]
fail_under = 100
